--- a/Pages/NavMenu.razor
+++ b/Pages/NavMenu.razor
@@ -19,6 +19,7 @@
                     <circle cx="257.81" cy="198.46" r="17.24"/>
                     <path d="m182.49 96.66-.07.05.07-.04Z"/>
                 </svg>
+                <img src="/images/PIMCO_White_RGB.png" alt="PIMCO" class="img-fluid">
             </div>
             <button class="navbar-toggler border-0" @onclick="ToggleNavMenu">
                 <i class="bi bi-arrow-right-square-fill"></i>
